--- a/src/scss/components/_notices.scss
+++ b/src/scss/components/_notices.scss
@@ -1,14 +1,32 @@
-$notices-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12), 0 0 6px rgba(0, 0, 0, 0.04) !default;
+$notices-shadow-color: rgba(var(--scheme-invert-rgb, #{bulmaToRGB($black)}), 0.12) !default;
+$notices-shadow-color-bis: rgba(var(--scheme-invert-rgb, #{bulmaToRGB($black)}), 0.04) !default;
+$notices-box-shadow: 0 1px 4px $notices-shadow-color, 0 0 6px $notices-shadow-color-bis !default;
 
 $toast-border-radius: 2em !default;
 $toast-opacity: 0.92 !default;
 $toast-box-shadow: $notices-box-shadow !default;
 
-$snackbar-background-color: $dark !default;
-$snackbar-color: $dark-invert !default;
-$snackbar-border-radius: $radius !default;
+$snackbar-background-color: var(--dark, #{$dark}) !default; // dark is registered as var hence has hsl map
+$snackbar-color: var(--dark-invert, #{$dark-invert}) !default;
+$snackbar-border-radius: var(--radius, #{$radius}) !default;
 $snackbar-button-text-transform: uppercase !default;
 $snackbar-box-shadow: $notices-box-shadow !default;
+
+$css-vars-map: (
+    'notices-box-shadow': ($notices-box-shadow),
+    'toast-border-radius': ($toast-border-radius),
+    'toast-opacity': ($toast-opacity),
+    'toast-box-shadow': ($toast-box-shadow),
+    'snackbar-background-color': ($snackbar-background-color),
+    'snackbar-color': ($snackbar-color),
+    'snackbar-border-radius': ($snackbar-border-radius),
+    'snackbar-button-text-transform': ($snackbar-button-text-transform),
+    'snackbar-box-shadow': ($snackbar-box-shadow),
+);
+
+.notices, [class^="notices-"] {
+    @include registerCSSVars($css-vars-map, $at-root)
+}
 
 .notices {
     position: fixed;
@@ -23,34 +41,35 @@ $snackbar-box-shadow: $notices-box-shadow !default;
     pointer-events: none;
     .toast {
         display: inline-flex;
-        animation-duration: $speed-slow;
+        animation-duration: calc(var(--speed, #{$speed}) * 2);
         margin: 0.5em 0;
         text-align: center;
-        box-shadow: $toast-box-shadow;
-        border-radius: $toast-border-radius;
+        box-shadow: var(--toast-box-shadow);
+        border-radius: var(--toast-border-radius);
         padding: 0.75em 1.5em;
         pointer-events: auto;
-        opacity: $toast-opacity;
+        opacity: var(--toast-opacity);
         @each $name, $pair in $notification-colors {
             $color: nth($pair, 1);
             $color-invert: nth($pair, 2);
             &.is-#{$name} {
-                color: $color-invert;
-                background: $color;
+                color: var(--#{$name}-invert, #{$color-invert});
+                background: var(--#{$name}, #{$color});
             }
         }
     }
     .snackbar {
+        --snackbar-button-background-color: #{bulmaCSSVarDarken('dark', 5%)};
         display: inline-flex;
         align-items: center;
         justify-content: space-around;
-        animation-duration: $speed-slow;
+        animation-duration: calc(var(--speed, #{$speed}) * 2);
         margin: 0.5em 0;
-        box-shadow: $snackbar-box-shadow;
-        border-radius: $snackbar-border-radius;
+        box-shadow: var(--snackbar-box-shadow);
+        border-radius: var(--snackbar-border-radius);
         pointer-events: auto;
-        background: $snackbar-background-color;
-        color: $snackbar-color;
+        background: var(--snackbar-background-color);
+        color: var(--snackbar-color);
         min-height: 3em;
         .text {
             padding: 0.5em 1em;
@@ -60,22 +79,23 @@ $snackbar-box-shadow: $notices-box-shadow !default;
             padding: 0.5em;
             padding-left: 0;
             .button {
-                font-weight: $weight-semibold;
-                text-transform: $snackbar-button-text-transform;
-                background: $snackbar-background-color;
+                font-weight: var(--weight-semibold, #{$weight-semibold});
+                text-transform: var(--snackbar-button-text-transform);
+                background: var(--snackbar-background-color);
                 border: transparent;
             }
             .button:hover {
-                background: darken($snackbar-background-color, 5%);
+                // TODO: revisit
+                background: var(--snackbar-button-background-color, #{bulmaDarken($dark, 5%)});
             }
             .button:active {
-                background: darken($snackbar-background-color, 5%);
+                background: var(--snackbar-button-background-color, #{bulmaDarken($dark, 5%)});
             }
             @each $name, $pair in $notification-colors {
                 $color: nth($pair, 1);
                 &.is-#{$name} {
                     .button {
-                        color: $color;
+                        color: var(--#{$name}, #{$color});
                     }
                 }
             }
@@ -112,7 +132,7 @@ $snackbar-box-shadow: $notices-box-shadow !default;
             align-self: flex-start;
         }
         &.is-toast {
-            opacity: $toast-opacity;
+            opacity: var(--toast-opacity);
         }
     }
 
