--- a/src/scss/components/_pagination.scss
+++ b/src/scss/components/_pagination.scss
@@ -1,8 +1,8 @@
 .pagination {
     .pagination-next,
     .pagination-previous {
-        padding-left: $pagination-nav-padding-left;
-        padding-right: $pagination-nav-padding-right;
+        padding-left: var(--pagination-nav-padding-left, #{$pagination-nav-padding-left});
+        padding-right: var(--pagination-nav-padding-right, #{$pagination-nav-padding-right});
         &.is-disabled {
             pointer-events: none;
             cursor: not-allowed;
