--- a/src/scss/components/_tag.scss
+++ b/src/scss/components/_tag.scss
@@ -9,9 +9,10 @@
         @each $name, $pair in $tag-colors {
             $color: nth($pair, 1);
             &.is-#{$name} {
-                background: $color;
+                --tag-delete-background-color: #{bulmaCSSVarDarken($name, 10%)};
+                background: var(--#{$name}, #{$color});
                 &:hover {
-                    background-color: darken($color, 10%);
+                    background-color: var(--tag-delete-background-color, #{bulmaDarken($color, 10%)});
                     text-decoration: none;
                 }
             }
