--- a/src/scss/components/_autocomplete.scss
+++ b/src/scss/components/_autocomplete.scss
@@ -1,5 +1,13 @@
 $dropdown-content-max-height: 200px !default;
 
+$css-vars-map: (
+    'dropdown-content-max-height': ($dropdown-content-max-height)
+);
+
+.autocomplete, [class^="autocomplete-"] {
+    @include registerCSSVars($css-vars-map, $at-root)
+}
+
 .autocomplete {
     position: relative;
     .dropdown-menu {
@@ -12,15 +20,15 @@ $dropdown-content-max-height: 200px !default;
     }
     .dropdown-content {
         overflow: auto;
-        max-height: $dropdown-content-max-height;
+        max-height: var(--dropdown-content-max-height);
     }
     .dropdown-item {
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
         &.is-hovered {
-            background: $dropdown-item-hover-background-color;
-            color: $dropdown-item-hover-color;
+            background: var(--dropdown-item-hover-background-color, #{$dropdown-item-hover-background-color});
+            color: var(--dropdown-item-hover-color, #{$dropdown-item-hover-color});
         }
         &.is-disabled {
             opacity: 0.5;
