--- a/src/scss/components/_clockpicker.scss
+++ b/src/scss/components/_clockpicker.scss
@@ -1,3 +1,12 @@
+$clockpicker-card-radius: var(--card-radius, #{$card-radius});
+
+$css-vars-map: (
+    'clockpicker-card-radius': ($clockpicker-card-radius)
+);
+
+.b-clockpicker, [class^="b-clockpicker-"] {
+    @include registerCSSVars($css-vars-map, $at-root)
+}
 
 .b-clockpicker {
     // Clockpicker variables defined here as exact numbers
@@ -17,8 +26,33 @@
 
     // mixins for supporting all $form-colors defined in Bulma/custom
     @mixin b-clockpicker-colors($name, $pair) {
+        $color: nth($pair, 1);
+        $color-invert: nth($pair, 2);
         &.is-#{$name} {
-            @include b-clockpicker-colors-set(nth($pair, 1), nth($pair, 2))
+            .card-header {
+                // background-color: $color;
+                background-color: var(--#{$name} #{$color});
+                // color: $inverse;
+                color: var(--#{$name}-invert, #{$color-invert});
+            }
+            .b-clockpicker-face {
+                &:after {
+                    // background-color: $color;
+                    background-color: var(--#{$name} #{$color});
+                }
+                &-hand {
+                    // background-color: $color;
+                    background-color: var(--#{$name} #{$color});
+                    // border-color: $color;
+                    border-color: var(--#{$name} #{$color});
+                }
+                &-number.active {
+                    // background-color: $color;
+                    background-color: var(--#{$name} #{$color});
+                    // color: $inverse;
+                    color: var(--#{$name}-invert, #{$color-invert});
+                }
+            }
         }
     }
 
@@ -42,7 +76,7 @@
         }
     }
 
-    @include b-clockpicker-colors-set($primary, $primary-invert);
+    @include b-clockpicker-colors-set(var(--primary, #{$primary}), var(--primary-invert, #{$primary-invert}));
 
     @each $name, $pair in $form-colors {
         @include b-clockpicker-colors($name, $pair)
@@ -56,12 +90,13 @@
         width: 100%;
         .input[readonly] {
             cursor: pointer;
-            box-shadow: $input-shadow;
+            box-shadow: var(--input-shadow, #{$input-shadow});
             &:focus,
             &.is-focused,
             &:active,
             &.is-active {
-                box-shadow: $input-focus-box-shadow-size $input-focus-box-shadow-color;
+                // box-shadow: $input-focus-box-shadow-size $input-focus-box-shadow-color;
+                box-shadow: var(--input-focus-box-shadow-size, #{$input-focus-box-shadow-size}) var(--input-focus-box-shadow-color, #{$input-focus-box-shadow-color});
             }
         }
     }
@@ -75,12 +110,12 @@
     }
 
     .card {
-        border-radius: $card-radius;
+        border-radius: var(--clockpicker-card-radius);
     }
 
     .card-header {
-        border-top-left-radius: $card-radius;
-        border-top-right-radius: $card-radius;
+        border-top-left-radius: var(--clockpicker-card-radius);
+        border-top-right-radius: var(--clockpicker-card-radius);
     }
 
     .card-content {
@@ -139,11 +174,11 @@
 
         .b-clockpicker-btn {
             padding: 0 8px;
-            border-radius: $radius-rounded;
+            border-radius: var(--radius-rounded, #{$radius-rounded});
             margin-bottom: 2px;
             &:hover,
             &.active {
-                background-color: $primary;
+                background-color: var(--primary, #{$primary});
                 color: white;
             }
         }
@@ -166,7 +201,7 @@
             // Outer border circle of clock
             border-radius: 50%;
             position: relative;
-            background-color: $grey-lighter;
+            background-color: var(--grey-lighter, #{$grey-lighter});
             width: 100%;
             height: 100%;
             align-items: center;
