--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -1,6 +1,15 @@
 $dropdown-mobile-breakpoint: $desktop !default;
-$dropdown-background-color: rgba($scheme-invert, 0.86) !default;
+$dropdown-background-color: rgba(var(--scheme-invert-rgb, #{bulmaToRGB($black)}), 0.86) !default;
 $dropdown-disabled-opacity: 0.5 !default;
+
+$css-vars-map: (
+    'dropdown-background-color': ($dropdown-background-color),
+    'dropdown-disabled-opacity': ($dropdown-disabled-opacity),
+);
+
+.dropdown, [class^="dropdown-"] {
+    @include registerCSSVars($css-vars-map, $at-root)
+}
 
 .dropdown {
     & + .dropdown {
@@ -9,7 +18,7 @@ $dropdown-disabled-opacity: 0.5 !default;
     .background {
         @include overlay;
         position: fixed;
-        background-color: $dropdown-background-color;
+        background-color: var(--dropdown-background-color);
         z-index: 40;
         cursor: pointer;
         @media screen and (min-width: $dropdown-mobile-breakpoint) {
@@ -67,7 +76,7 @@ $dropdown-disabled-opacity: 0.5 !default;
         .dropdown-menu {
             .dropdown-item {
                 &.is-disabled {
-                    opacity: $dropdown-disabled-opacity;
+                    opacity: var(--dropdown-disabled-opacity);
                 }
             }
         }
@@ -76,7 +85,7 @@ $dropdown-disabled-opacity: 0.5 !default;
         height: 100%;
     }
     &.is-disabled {
-        opacity: $dropdown-disabled-opacity;
+        opacity: var(--dropdown-disabled-opacity);
         cursor: not-allowed;
         .dropdown-trigger {
             pointer-events: none;
