--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -1,4 +1,14 @@
 $floating-in-height: 3.25em !default;
+$field-label-font-size: var(--size-normal, #{$size-normal}) !default;
+
+$css-vars-map: (
+    'floating-in-height': ($floating-in-height),
+    'field-label-font-size': ($field-label-font-size),
+);
+
+.field, [class^="field-"] {
+    @include registerCSSVars($css-vars-map, $at-root)
+}
 
 .field {
     &.is-grouped {
@@ -19,16 +29,16 @@ $floating-in-height: 3.25em !default;
             .button,
             .input,
             .select select {
-                border-bottom-left-radius: $input-radius;
-                border-top-left-radius: $input-radius;
+                border-bottom-left-radius: var(--input-radius, #{$input-radius});
+                border-top-left-radius: var(--input-radius, #{$input-radius});
             }
         }
         &:last-child .control {
             .button,
             .input,
             .select select {
-                border-bottom-right-radius: $input-radius;
-                border-top-right-radius: $input-radius;
+                border-bottom-right-radius: var(--input-radius, #{$input-radius});
+                border-top-right-radius: var(--input-radius, #{$input-radius});
             }
         }
         .control {
@@ -79,7 +89,7 @@ $floating-in-height: 3.25em !default;
         .label {
             position: absolute;
             left: 1em;
-            font-size: calc(#{$size-normal} * 3 / 4);
+            font-size: calc((var(--field-label-font-size) * 3) / 4);
             background-color: transparent;
             z-index: 5;
             white-space: nowrap;
@@ -88,13 +98,13 @@ $floating-in-height: 3.25em !default;
             overflow: hidden;
 
             &.is-small {
-                font-size: calc(#{$size-small} * 3 / 4);
+                --field-label-font-size: var(--size-small, #{$size-small});
             }
             &.is-medium {
-                font-size: calc(#{$size-medium} * 3 / 4);
+                --field-label-font-size: var(--size-medium, #{$size-medium});
             }
             &.is-large {
-                font-size: calc(#{$size-large} * 3 / 4);
+                --field-label-font-size: var(--size-large, #{$size-large});
             }
         }
         .taginput .counter {
@@ -108,8 +118,8 @@ $floating-in-height: 3.25em !default;
                     .button,
                     .input,
                     .select select {
-                        border-bottom-left-radius: $input-radius;
-                        border-top-left-radius: $input-radius;
+                        border-bottom-left-radius: var(--input-radius, #{$input-radius});
+                        border-top-left-radius: var(--input-radius, #{$input-radius});
                     }
                 }
             }
@@ -129,7 +139,7 @@ $floating-in-height: 3.25em !default;
                 left: 0;
                 right: 0;
                 height: 0.375em;
-                background-color: $input-background-color;
+                background-color: var(--input-background-color, #{$input-background-color});
                 z-index: -1;
             }
         }
@@ -150,29 +160,30 @@ $floating-in-height: 3.25em !default;
     }
     &.is-floating-in-label {
         > .label {
+            --field-floating-indent: #{calc(#{var(--floating-in-height, #{$floating-in-height})} / 2 - (#{var(--size-large, #{$size-large})} * 3 / 4) / 2)};
             top: 0.25em;
 
             + .control {
                 &.datepicker, &.timepicker {
                     .input {
-                        padding-top: calc(#{$floating-in-height} / 2 - (#{$size-large} * 3 / 4) / 2);
+                        padding-top: var(--field-floating-indent);
                         padding-bottom: 1px;
-                        height: $floating-in-height;
+                        height: var(--floating-in-height), #{$floating-in-height};
                     }
                 }
                 &:not(.datepicker):not(.timepicker):not(.taginput) {
                     .input,
                     .textarea,
                     select {
-                        padding-top: calc(#{$floating-in-height} / 2 - (#{$size-large} * 3 / 4) / 2);
+                        padding-top: var(--field-floating-indent);
                         padding-bottom: 1px;
-                        height: $floating-in-height;
+                        height: var(--floating-in-height), #{$floating-in-height};
                     }
                     .select:not(multiple) {
-                        height: $floating-in-height;
+                        height: var(--floating-in-height), #{$floating-in-height};
                         &.is-loading {
                             &::after {
-                                margin-top: calc(#{$floating-in-height} / 2 - (#{$size-large} * 3 / 4) / 2);
+                                margin-top: var(--field-floating-indent);
                             }
                         }
                         &::after {
@@ -183,20 +194,20 @@ $floating-in-height: 3.25em !default;
                 &.taginput {
                     .taginput-container {
                         // 0.275em - 1px _taginput.scss
-                        padding-top: calc(#{$floating-in-height} / 2 - (#{$size-large} * 3 / 4) / 2 + (0.275em - 1px));
+                        padding-top: calc(var(--field-floating-indent) + (0.275em - 1px));
                     }
                 }
                 &:not(.taginput) {
-                    .is-left.icon,
+                    .is-left.field,
                     .is-right.icon {
-                        height: $floating-in-height;
+                        height: var(--floating-in-height), #{$floating-in-height};
                     }
                     .is-left.icon {
-                        padding-top: calc(#{$floating-in-height} / 2 - (#{$size-large} * 3 / 4) / 2);
+                        padding-top: var(--field-floating-indent);
                     }
                 }
                 &.is-loading::after {
-                    margin-top: calc(#{$floating-in-height} / 2 - (#{$size-large} * 3 / 4) / 2);
+                    margin-top: var(--field-floating-indent);
                 }
             }
 
@@ -207,14 +218,14 @@ $floating-in-height: 3.25em !default;
                         .input,
                         .textarea,
                         select {
-                            padding-top: calc(#{$floating-in-height} / 2 - (#{$size-large} * 3 / 4) / 2);
+                            padding-top: var(--field-floating-indent);
                             padding-bottom: 1px;
                         }
                         .input,
                         .textarea,
                         select,
                         .button {
-                            height: $floating-in-height;
+                            height: var(--floating-in-height), #{$floating-in-height};
                         }
                     }
                 }
@@ -226,7 +237,7 @@ $floating-in-height: 3.25em !default;
                 .control {
                     .input,
                     .button {
-                        height: $floating-in-height;
+                        height: var(--floating-in-height), #{$floating-in-height};
                     }
                 }
             }
@@ -235,41 +246,41 @@ $floating-in-height: 3.25em !default;
     &.is-floating-label, &.is-floating-in-label {
         &.has-numberinput {
             .label {
-                margin-left: calc(#{$size-normal} * 3);
+                margin-left: calc(#{var(--size-normal, #{$size-normal})} * 3);
             }
             &.has-numberinput-is-small {
                 .label {
-                    margin-left: calc(#{$size-small} * 3);
+                    margin-left: calc(#{var(--size-small, #{$size-small})} * 3);
                 }
             }
             &.has-numberinput-is-medium {
                 .label {
-                    margin-left: calc(#{$size-medium} * 3);
+                    margin-left: calc(#{var(--size-medium, #{$size-medium})} * 3);
                 }
             }
             &.has-numberinput-is-large {
                 .label {
-                    margin-left: calc(#{$size-large} * 3);
+                    margin-left: calc(#{var(--size-large, #{$size-large})} * 3);
                 }
             }
         }
         &.has-numberinput-compact {
             .label {
-                margin-left: calc(#{$size-normal} * 2.25);
+                margin-left: calc(#{var(--size-normal, #{$size-normal})} * 2.25);
             }
             &.has-numberinput-is-small {
                 .label {
-                    margin-left: calc(#{$size-small} * 2.25);
+                    margin-left: calc(#{var(--size-small, #{$size-small})} * 2.25);
                 }
             }
             &.has-numberinput-is-medium {
                 .label {
-                    margin-left: calc(#{$size-medium} * 2.25);
+                    margin-left: calc(#{var(--size-medium, #{$size-medium})} * 2.25);
                 }
             }
             &.has-numberinput-is-large {
                 .label {
-                    margin-left: calc(#{$size-large} * 2.25);
+                    margin-left: calc(#{var(--size-large, #{$size-large})} * 2.25);
                 }
             }
         }
