--- a/src/scss/components/_icon.scss
+++ b/src/scss/components/_icon.scss
@@ -1,6 +1,15 @@
 $icon-svg-width: auto !default;
 $icon-svg-height: auto !default;
 
+$css-vars-map: (
+    'icon-svg-width': ($icon-svg-width),
+    'icon-svg-height': ($icon-svg-height),
+);
+
+.icon, [class^="icon-"] {
+    @include registerCSSVars($css-vars-map, $at-root)
+}
+
 .icon {
     @include unselectable;
     cursor: inherit;
@@ -10,7 +19,7 @@ $icon-svg-height: auto !default;
         stroke-width: 0;
         stroke: currentColor;
         pointer-events: none;
-        width: $icon-svg-width;
-        height: $icon-svg-height;
+        width: var(--icon-svg-width);
+        height: var(--icon-svg-height);
     }
 }
