--- a/src/scss/components/_image.scss
+++ b/src/scss/components/_image.scss
@@ -1,6 +1,14 @@
 $image-placeholder-blur-enabled: true !default;
 $image-placeholder-blur: 10px !default;
 
+$css-vars-map: (
+    'image-placeholder-blur': ($image-placeholder-blur),
+);
+
+.b-image-wrapper, [class^="b-image-wrapper-"] {
+    @include registerCSSVars($css-vars-map, $at-root)
+}
+
 .b-image-wrapper {
     > img {
         object-fit: cover;
@@ -13,7 +21,7 @@ $image-placeholder-blur: 10px !default;
         }
         @if $image-placeholder-blur-enabled {
             &.placeholder {
-                filter: blur($image-placeholder-blur);
+                filter: blur(var(--image-placeholder-blur));
             }
         }
     }
