--- a/src/scss/components/_rate.scss
+++ b/src/scss/components/_rate.scss
@@ -1,16 +1,31 @@
-$rate-color: $grey-lighter !default;
-$rate-color-active: darken($warning, 5%) !default;
+$rate-color: var(--grey-lighter, #{$grey-lighter}) !default;
+$rate-color-active-hsla: bulmaCSSVarDarken('warning', 5%) !default;
+$rate-color-active: var(--rate-color-active-hsla, #{bulmaDarken($warning, 5%)}) !default;
 $rate-spaced: 0.25rem !default;
 $rate-text-spaced: 0.35rem !default;
+$rate-text-font-size: var(--size-normal, #{$size-normal}) !default;
+
+$css-vars-map: (
+    'rate-color': ($rate-color),
+    'rate-color-active-hsla': ($rate-color-active-hsla),
+    'rate-color-active': ($rate-color-active),
+    'rate-spaced': ($rate-spaced),
+    'rate-text-spaced': ($rate-text-spaced),
+    'rate-text-font-size': ($rate-text-font-size),
+);
+
+.rate, [class^="rate-"] {
+    @include registerCSSVars($css-vars-map, $at-root)
+}
 
 .rate {
     align-items: center;
     display: flex;
     &:not(:last-child) {
-        margin-bottom: ($block-spacing / 2);
+        margin-bottom: calc(var(--block-spacing, #{$block-spacing}) / 2);
     }
     &.is-spaced .rate-item:not(:last-child) {
-        margin-right: $rate-spaced;
+        margin-right: var(--rate-spaced);
     }
     &.is-disabled .rate-item {
         cursor: initial;
@@ -24,7 +39,7 @@ $rate-text-spaced: 0.35rem !default;
        }
        .rate-text {
             margin-left: 0;
-            margin-right: $rate-text-spaced;
+            margin-right: var(--rate-text-spaced);
        }
     }
     .rate-item {
@@ -37,7 +52,7 @@ $rate-text-spaced: 0.35rem !default;
         }
         &.set-on .icon,
         &.set-half .is-half {
-            color: $rate-color-active;
+            color: var(--rate-color-active);
         }
         &.set-half .is-half {
             position: absolute;
@@ -47,7 +62,7 @@ $rate-text-spaced: 0.35rem !default;
         }
     }
     .icon {
-        color: $rate-color;
+        color: var(--rate-color);
         line-height: 1;
         pointer-events: none;
         width: inherit;
@@ -57,16 +72,16 @@ $rate-text-spaced: 0.35rem !default;
         left: 0;
     }
     .rate-text {
-        font-size: calc(#{$size-normal} / 1.25);
-        margin-left: $rate-text-spaced;
+        font-size: calc(var(--rate-text-font-size) / 1.25);
+        margin-left: var(--rate-text-spaced);
         &.is-small {
-            font-size: calc(#{$size-small} / 1.25);
+            --rate-text-font-size: var(--size-small, #{$size-small});
         }
         &.is-medium {
-            font-size: calc(#{$size-medium} / 1.25);
+            --rate-text-font-size: var(--size-medium, #{$size-medium});
         }
         &.is-large {
-            font-size: calc(#{$size-large} / 1.25);
+            --rate-text-font-size: var(--size-large, #{$size-large});
         }
     }
 }
