--- a/src/scss/components/_select.scss
+++ b/src/scss/components/_select.scss
@@ -7,16 +7,16 @@
 
         padding-right: 2.5em;
         option {
-            color: $grey-dark;
-            padding: $control-padding-vertical $control-padding-horizontal;
+            color: var(--grey-dark, #{$grey-dark});
+            padding: var(--control-padding-vertical, #{$control-padding-vertical}) var(--control-padding-horizontal, #{$control-padding-horizontal});
         }
         option:disabled {
             cursor: not-allowed;
             opacity: 0.5;
         }
         optgroup {
-            color: $grey-light;
-            font-weight: $weight-normal;
+            color: var(--grey-lighter, #{$grey-lighter});
+            font-weight: var(--weight-normal, #{$weight-normal});
             font-style: normal;
             padding: 0.25em 0;
         }
