--- a/src/scss/components/_switch.scss
+++ b/src/scss/components/_switch.scss
@@ -1,8 +1,20 @@
 $switch-width-number: 2.75 !default;
 $switch-width: $switch-width-number * 1em !default;
 $switch-padding: 0.2em !default;
-$switch-active-background-color: $primary !default;
+$switch-active-background-color: var(--primary, #{$primary}) !default;
+
 $switch-colors: $form-colors !default;
+
+$css-vars-map: (
+    'switch-width-number': ($switch-width-number),
+    'switch-width': ($switch-width),
+    'switch-padding': ($switch-padding),
+    'switch-active-background-color': ($switch-active-background-color),
+);
+
+.switch, [class^="switch-"] {
+    @include registerCSSVars($css-vars-map, $at-root)
+}
 
 .switch {
     @extend %unselectable;
@@ -24,16 +36,19 @@ $switch-colors: $form-colors !default;
             display: flex;
             align-items: center;
             flex-shrink: 0;
-            width: $switch-width;
-            height: #{$switch-width / 2 + $switch-padding};
-            padding: $switch-padding;
-            background: $grey-light;
-            border-radius: $radius;
-            transition: background $speed-slow $easing, box-shadow $speed-slow $easing;
+            width: var(--switch-width);
+            height: calc((var(--switch-width) / 2) + var(--switch-padding));
+            padding: var(--switch-padding);
+            background: var(--grey-light, #{$grey-light});
+            border-radius: var(--radius, #{$radius});
+            // transition: background $speed-slow $easing, box-shadow $speed-slow $easing;
+            transition-property: background, box-shadow;
+            transition-duration: calc(var(--speed, #{$speed}) * 2), calc(var(--speed, #{$speed}) * 2);
+            transition-timing-function: var(--easing, #{$easing}), var(--easing, #{$easing});
             @each $name, $pair in $switch-colors {
                 $color: nth($pair, 1);
                 &.is-#{$name}-passive, &:hover {
-                    background: $color;
+                    background: var(--#{$name}, #{$color});
                 }
                 &.input[type=checkbox] + &.check {
                     background: 'pink';
@@ -42,26 +57,29 @@ $switch-colors: $form-colors !default;
             &:before {
                 content: "";
                 display: block;
-                border-radius: $radius;
-                width: #{($switch-width - $switch-padding * 2) / 2};
-                height: #{($switch-width - $switch-padding * 2) / 2};
-                background: $background;
-                box-shadow: 0 3px 1px 0 rgba(0, 0, 0, 0.05), 0 2px 2px 0 rgba(0, 0, 0, 0.1), 0 3px 3px 0 rgba(0, 0, 0, 0.05);
-                transition: transform $speed-slow $easing;
+                border-radius: var(--radius, #{$radius});
+                width: calc((var(--switch-width) - (var(--switch-padding) * 2)) / 2);
+                height: calc((var(--switch-width) - (var(--switch-padding) * 2)) / 2);
+                background: var(--background, #{$background});
+                box-shadow: 0 3px 1px 0 rgba(var(--scheme-invert-rgb, #{bulmaToRGB($black)}), 0.05), 0 2px 2px 0 rgba(var(--scheme-invert-rgb, #{bulmaToRGB($black)}), 0.1), 0 3px 3px 0 rgba(var(--scheme-invert-rgb, #{bulmaToRGB($black)}), 0.05);
+                // transition: transform $speed-slow $easing;
+                transition-property: transform;
+                transition-duration: calc(var(--speed, #{$speed}) * 2);
+                transition-timing-function: var(--easing, #{$easing});
                 will-change: transform;
                 transform-origin: left;
             }
             &.is-elastic:before {
                 transform: scaleX(1.5);
-                border-radius: $radius;
+                border-radius: var(--radius, #{$radius});
             }
         }
         &:checked + .check {
-            background: $switch-active-background-color;
+            background: var(--switch-active-background-color);
             @each $name, $pair in $switch-colors {
                 $color: nth($pair, 1);
                 &.is-#{$name} {
-                    background: $color;
+                    background: var(--#{$name}, #{$color});
                 }
             }
             &:before {
@@ -75,20 +93,23 @@ $switch-colors: $form-colors !default;
         &:focus, &:active {
             outline: none;
             + .check {
-                box-shadow: 0 0 0.5em rgba($grey, 0.6);
+                box-shadow: 0 0 0.5em bulmaRgba($grey, 0.6);
                 @each $name, $pair in $switch-colors {
                     $color: nth($pair, 1);
                     &.is-#{$name}-passive {
-                        box-shadow: 0 0 0.5em rgba($color, 0.8);
+                        --focus-box-shadow-color: #{bulmaCSSVarRgba($name, 0.8)};
+                        box-shadow: 0 0 0.5em var(--focus-box-shadow-color, #{bulmaRgba($color, 0.8)})
                     }
                 }
             }
             &:checked + .check {
-                box-shadow: 0 0 0.5em rgba($switch-active-background-color, 0.8);
+                // TODO:
+                box-shadow: 0 0 0.5em bulmaRgba($switch-active-background-color, 0.8);
                 @each $name, $pair in $switch-colors {
                     $color: nth($pair, 1);
                     &.is-#{$name} {
-                        box-shadow: 0 0 0.5em rgba($color, 0.8);
+                        --focus-box-shadow-color: #{bulmaCSSVarRgba($name, 0.8)};
+                        box-shadow: 0 0 0.5em var(--focus-box-shadow-color, #{bulmaRgba($color, 0.8)});
                     }
                 }
             }
@@ -98,32 +119,35 @@ $switch-colors: $form-colors !default;
     &.has-left-label {
         flex-direction: row-reverse;
         .control-label {
-            padding-right: $control-padding-horizontal;
+            padding-right: var(--control-padding-horizontal, #{$control-padding-horizontal});
         }
     }
 
     &:not(.has-left-label) {
         .control-label {
-            padding-left: $control-padding-horizontal;
+            padding-left: var(--control-padding-horizontal, #{$control-padding-horizontal});
         }
     }
 
     &:hover {
         input[type=checkbox] + .check {
-            background: rgba($grey-light, 0.9);
+            background: bulmaRgba($grey-light, 0.9);
             @each $name, $pair in $switch-colors {
                 $color: nth($pair, 1);
                 &.is-#{$name}-passive {
-                    background: rgba($color, 0.9);
+                    --hover-background-color: #{bulmaCSSVarRgba($name, 0.9)};
+                    background: var(--hover-background-color, #{bulmaRgba($color, 0.9)});
                 }
             }
         }
         input[type=checkbox]:checked + .check {
-            background: rgba($switch-active-background-color, 0.9);
+            // TODO: 
+            background: bulmaRgba($switch-active-background-color, 0.9);
             @each $name, $pair in $switch-colors {
                 $color: nth($pair, 1);
                 &.is-#{$name} {
-                    background: rgba($color, 0.9);
+                    --hover-background-color: #{bulmaCSSVarRgba($name, 0.9)};
+                    background: var(--hover-background-color, #{bulmaRgba($color, 0.9)});
                 }
             }
         }
@@ -131,14 +155,14 @@ $switch-colors: $form-colors !default;
     &.is-rounded {
         input[type=checkbox] {
             + .check {
-                border-radius: $radius-rounded;
+                border-radius: var(--radius-rounded, #{$radius-rounded});
                 &:before {
-                    border-radius: $radius-rounded;
+                    border-radius: var(--radius-rounded, #{$radius-rounded});
                 }
             }
             &.is-elastic:before {
                 transform: scaleX(1.5);
-                border-radius: $radius-rounded;
+                border-radius: var(--radius-rounded, #{$radius-rounded});
             }
         }
     }
@@ -146,52 +170,55 @@ $switch-colors: $form-colors !default;
         input[type=checkbox] {
             + .check {
                 background: transparent;
-                border: .1rem solid $grey-light;
+                border: .1rem solid var(--grey-light, #{$grey-light});
                 @each $name, $pair in $switch-colors {
                     $color: nth($pair, 1);
                     &.is-#{$name}-passive {
-                        border: .1rem solid rgba($color, 0.9);
+                        --check-box-shadow-color: #{bulmaCSSVarRgba($name, 0.9)};
+                        border: .1rem solid var(--check-box-shadow-color, #{bulmaRgba($color, 0.9)});
                         &:before {
-                            background: $color
+                            background: var(--#{$name}, #{$color});
                         }
                         &:hover {
-                            border-color: rgba($color, 0.9);
+                            background: var(--check-box-shadow-color, #{bulmaRgba($color, 0.9)});
                         }
                     }
                 }
                 &:before {
-                    background: $grey-light;
+                    background: var(--grey-light, #{$grey-light});
                 }
             }
             &:checked + .check {
-                border-color: $switch-active-background-color;
+                border-color: var(--switch-active-background-color);
                 @each $name, $pair in $switch-colors {
                     $color: nth($pair, 1);
                     &.is-#{$name} {
                         background: transparent;
-                        border-color: $color;
+                        border-color: var(--#{$name}, #{$color});
                         &:before {
-                            background: $color;
+                            background: var(--#{$name}, #{$color});
                         }
                     }
                 }
                 &:before {
-                    background: $switch-active-background-color;
+                    background: var(--switch-active-background-color);
                 }
             }
         }
         &:hover {
             input[type=checkbox] + .check {
                 background: transparent;
-                border-color: rgba($grey-light, 0.9);
+                border-color: bulmaRgba($grey-light, 0.9);
             }
             input[type=checkbox]:checked + .check {
                 background: transparent;
-                border-color: rgba($switch-active-background-color, 0.9);
+                // TODO: bulmaRgba
+                border-color: bulmaRgba($switch-active-background-color, 0.9);
                 @each $name, $pair in $switch-colors {
                     $color: nth($pair, 1);
                     &.is-#{$name} {
-                        border-color: rgba($color, 0.9);
+                        --hover-box-shadow-color: #{bulmaCSSVarRgba($name, 0.9)};
+                        background: var(--hover-box-shadow-color, #{bulmaRgba($color, 0.9)});
                     }
                 }
             }
@@ -209,6 +236,6 @@ $switch-colors: $form-colors !default;
     &[disabled] {
         opacity: 0.5;
         cursor: not-allowed;
-        color: $grey;
+        color: var(--grey, #{$grey});
     }
 }
