--- a/src/scss/components/_table.scss
+++ b/src/scss/components/_table.scss
@@ -1,5 +1,13 @@
 $table-sticky-header-height: 300px !default;
 
+$css-vars-map: (
+    'table-sticky-header-height': ($table-sticky-header-height),
+);
+
+.b-table, [class^="b-table-"] {
+    @include registerCSSVars($css-vars-map, $at-root)
+}
+
 @mixin table-cards {
     .table {
         background-color: transparent;
@@ -28,7 +36,7 @@ $table-sticky-header-height: 300px !default;
     }
     tr {
         // Card style — Cannot extend inside media query
-        box-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1);
+        box-shadow: 0 2px 3px rgba(var(--scheme-invert-rgb, #{bulmaToRGB($black)}), 0.1), 0 0 0 1px rgba(var(--scheme-invert-rgb, #{bulmaToRGB($black)}), 0.1);
         max-width: 100%;
         position: relative;
         display: block;
@@ -44,9 +52,9 @@ $table-sticky-header-height: 300px !default;
         }
         // Disables is-*
         &:not([class*="is-"]) {
-            background: $table-background-color;
+            background: var(--table-background-color, #{$table-background-color});
             &:hover {
-                background-color: $table-background-color;
+                background-color: var(--table-background-color, #{$table-background-color});
             }
         }
         &.detail {
@@ -59,10 +67,10 @@ $table-sticky-header-height: 300px !default;
             width: auto;
             justify-content: space-between;
             text-align: right;
-            border-bottom: 1px solid $background;
+            border-bottom: 1px solid var(--background, #{$background});
             &:before {
                 content: attr(data-label);
-                font-weight: $weight-semibold;
+                font-weight: var(--weight-semibold, #{$weight-semibold});
                 padding-right: 0.5em;
                 text-align: left;
             }
@@ -83,7 +91,10 @@ $table-sticky-header-height: 300px !default;
 }
 
 .b-table {
-    transition: opacity $speed $easing;
+    // transition: opacity $speed $easing;
+    transition-property: transform, opacity;
+    transition-duration: calc(var(--speed, #{$speed}) * 2), var(--speed, #{$speed});
+    transition-timing-function: var(--easing, #{$easing}), var(--easing, #{$easing});
 
     .table-mobile-sort {
         @include tablet {
@@ -92,7 +103,10 @@ $table-sticky-header-height: 300px !default;
     }
 
     .icon {
-        transition: transform $speed-slow $easing, opacity $speed $easing;
+        // transition: transform $speed-slow $easing, opacity $speed $easing;
+        transition-property: transform, opacity;
+        transition-duration: calc(var(--speed, #{$speed}) * 2), var(--speed, #{$speed});
+        transition-timing-function: var(--easing, #{$easing}), var(--easing, #{$easing});
         &.is-desc {
             transform: rotate(180deg);
         }
@@ -108,10 +122,10 @@ $table-sticky-header-height: 300px !default;
     .table {
         width: 100%;
         border: 1px solid transparent;
-        border-radius: $radius;
+        border-radius: var(--radius, #{$radius});
         border-collapse: separate;
         th {
-            font-weight: $weight-semibold;
+            font-weight: var(--weight-semibold, #{$weight-semibold});
             .th-wrap {
                 display: flex;
                 align-items: center;
@@ -134,11 +148,11 @@ $table-sticky-header-height: 300px !default;
                 }
             }
             &.is-current-sort {
-                border-color: $grey;
-                font-weight: $weight-bold;
+                border-color: var(--grey, #{$grey});
+                font-weight: var(--weight-bold, #{$weight-bold});
             }
             &.is-sortable:hover {
-                border-color: $grey;
+                border-color: var(--grey, #{$grey});
             }
             &.is-sortable,
             &.is-sortable .th-wrap {
@@ -162,17 +176,17 @@ $table-sticky-header-height: 300px !default;
                 position: sticky;
                 left: 0;
                 z-index: 3 !important;
-                background: $table-head-background-color;
+                background: var(--table-head-background-color, #{$table-head-background-color});
             }
         }
         tr {
             &.is-selected {
                 .checkbox input {
                     &:checked + .check {
-                        background: $table-row-active-color url(checkmark($table-row-active-background-color)) no-repeat center center;
+                        background: var(--table-row-active-color, #{$table-row-active-color}) url(checkmark($table-row-active-background-color)) no-repeat center center;
                     }
                     + .check {
-                        border-color: $table-row-active-color;
+                        border-color: var(--table-row-active-color, #{$table-row-active-color});
                     }
                 }
             }
@@ -183,7 +197,7 @@ $table-sticky-header-height: 300px !default;
         .chevron-cell {
             vertical-align: middle;
             > a {
-                color: $input-arrow !important;
+                color: var(--input-arrow, #{$input-arrow}) !important;
             }
         }
         .checkbox-cell {
@@ -196,23 +210,24 @@ $table-sticky-header-height: 300px !default;
             }
         }
         tr.detail {
-            box-shadow: inset 0 1px 3px $grey-lighter;
-            background: $scheme-main-bis;
+            box-shadow: inset 0 1px 3px var(--grey-lighter, #{$grey-lighter});
+            background: var(--scheme-main-bis, #{$scheme-main-bis});
             .detail-container {
                 padding: 1rem;
             }
         }
         &:focus {
-            border-color: $link;
-            box-shadow: 0 0 0 0.125em rgba($link, 0.25);
+            --focus-box-shadow-color: #{bulmaCSSVarRgba('link', 0.25)};
+            border-color: var(--link, #{$link});
+            box-shadow: 0 0 0 0.125em var(--focus-box-shadow-color, #{bulmaRgba($link, 0.25)});
         }
 
         // Modifiers
         &.is-bordered {
             th.is-current-sort,
             th.is-sortable:hover {
-                border-color: $grey-lighter;
-                background: $background;
+                border-color: var(--grey-lighter, #{$grey-lighter});
+                background: var(--background, #{$background});
             }
         }
 
@@ -222,7 +237,7 @@ $table-sticky-header-height: 300px !default;
                 position: sticky;
                 left: 0;
                 z-index: 1;
-                background: $table-background-color;
+                background: var(--table-background-color, #{$table-background-color});
             }
         }
 
@@ -232,7 +247,7 @@ $table-sticky-header-height: 300px !default;
                     &:nth-child(even) {
                         td {
                             &.is-sticky {
-                                background: $table-striped-row-even-background-color;
+                                background: var(--table-striped-row-even-background-color, #{$table-striped-row-even-background-color});
                             }
                         }
                     }
@@ -248,7 +263,7 @@ $table-sticky-header-height: 300px !default;
     .table-wrapper {
         position: relative;
         &.has-sticky-header {
-            height: $table-sticky-header-height;
+            height: var(--table-sticky-header-height);
             overflow-y: auto;
             &.has-mobile-cards {
                 @include mobile {
@@ -262,7 +277,7 @@ $table-sticky-header-height: 300px !default;
                     position: sticky;
                     top: 0;
                     z-index: 2;
-                    background: $table-background-color;
+                    background: var(--table-background-color, #{$table-background-color});
                 }
             }
         }
