--- a/src/scss/components/_taginput.scss
+++ b/src/scss/components/_taginput.scss
@@ -1,5 +1,13 @@
 $taginput-height: calc(2em - 1px) !default;
 
+$css-vars-map: (
+    'taginput-height': ($taginput-height),
+);
+
+.taginput, [class^="taginput-"] {
+    @include registerCSSVars($css-vars-map, $at-root)
+}
+
 .taginput {
     .taginput-container {
         display: flex;
@@ -36,13 +44,13 @@ $taginput-height: calc(2em - 1px) !default;
             margin-left: 0.275rem;
             margin-bottom: calc(0.275em - 1px);
             font-size: 0.9em;
-            height: $taginput-height;
+            height: var(--taginput-height);
             .tag {
                 margin-bottom: 0;
                 font-size: 0.9em;
-                height: $taginput-height;
+                height: var(--taginput-height);
                 &.is-delete {
-                    width: $taginput-height;
+                    width: var(--taginput-height);
                 }
             }
         }
@@ -51,7 +59,7 @@ $taginput-height: calc(2em - 1px) !default;
             position: static;
             flex: 1;
             input {
-                height: $taginput-height;
+                height: var(--taginput-height);
                 margin-bottom: calc(0.275em - 1px);
                 padding-top: 0;
                 padding-bottom: 0;
@@ -63,7 +71,7 @@ $taginput-height: calc(2em - 1px) !default;
                 }
             }
             .icon {
-                height: $taginput-height;
+                height: var(--taginput-height);
             }
             > .control.is-loading::after {
                 top: 0.375em;
