--- a/src/scss/components/_timepicker.scss
+++ b/src/scss/components/_timepicker.scss
@@ -7,12 +7,12 @@
         width: 100%;
         .input[readonly] {
             cursor: pointer;
-            box-shadow: $input-shadow;
+            box-shadow: var(--input-shadow, #{$input-shadow});
             &:focus,
             &.is-focused,
             &:active,
             &.is-active {
-                box-shadow: $input-focus-box-shadow-size $input-focus-box-shadow-color;
+                box-shadow: var(--input-focus-box-shadow-size, #{$input-focus-box-shadow-size}) var(--input-focus-box-shadow-color, #{$input-focus-box-shadow-color});
             }
         }
     }
@@ -37,12 +37,12 @@
                 margin: 0 0.125em;
 
                 select {
-                    font-weight: $weight-semibold;
-                    padding-right: $control-padding-horizontal;
+                    font-weight: var(--weight-semibold, #{$weight-semibold});
+                    padding-right: var(--control-padding-horizontal, #{$control-padding-horizontal});
                     border: 0;
                     option {
                         &:disabled {
-                            color: rgba($grey, 0.7);
+                            color: bulmaRgba($grey, 0.7);
                         }
                     }
                 }
@@ -55,7 +55,7 @@
                 line-height: 1.7em;
 
                 &:last-child {
-                    padding-right: $control-padding-horizontal;
+                    padding-right: var(--control-padding-horizontal, #{$control-padding-horizontal});
                 }
             }
         }
